cmake_minimum_required(VERSION 2.8)
project( displayImage )
find_package( OpenCV REQUIRED )
add_executable( displayImage displayImage.cpp )
add_executable( houghcircles houghcircles.cpp )
add_executable( ellipse ellipse.cpp )
add_executable( ellipse0 ellipse0.cpp )
target_link_libraries( displayImage ${OpenCV_LIBS} )
target_link_libraries( houghcircles ${OpenCV_LIBS} )
target_link_libraries( ellipse ${OpenCV_LIBS} )
target_link_libraries( ellipse0 ${OpenCV_LIBS} )
